# phd-track-import

./: adjust-params.sh  level-detection-manual.sh  level-detection-mc.sh  level-detection-real-verify.sh  refining-track-selection-process-simulated.sh  refining-track-selection-process-track-interpretation.sh  smi-classify-selected.sh  smi-classify-simulated.sh
extract_track_selections/: 2014_selections  2015_and_2014.csv  2015_selections  extract_selections.sh  extract_selections_nanobrowser.sh
import-tracks/: adjust-params.csv  level-detection-manual.csv  level-detection-mc.csv  level-detection-verify.csv  refining-track-selection-process-simulated.csv  refining-track-selection-process-track-interpretation.csv.back  smi-classify-manual-selection-01.csv  smi-classify-manual-selection-02.csv  smi-classify-manual-selection-03.csv  smi-classify-manual-selection-04.csv  smi-classify-manual-selection-05.csv  smi-classify-manual-selection-06.csv  smi-classify-manual-selection-07.csv  smi-classify-manual-selection-08.csv  smi-classify-manual-selection-09.csv  smi-classify-manual-selection-10.csv  smi-classify-simulated.csv
src/: CMakeLists.txt  smi-csv-import-all-tracks.cpp  smi-db-import-classification.cpp  smi-db-import-level-detection.cpp
src/include/: helpers.hpp  io.hpp
src/src/: CMakeLists.txt  helpers.cpp  io.cpp
src_old/: CMakeLists.txt
src_old/cmake/Modules/: FindLIBPQXX.cmake
src_old/desktop/: CMakeLists.txt  design-scores.cpp  gd.cpp  level-detection.cpp
src_old/exp/: CMakeLists.txt  auto-encoder.cpp  cross-validate.cpp  find-parameters.cpp  fitness-evolution.cpp  reconstruct-minist.cpp
src_old/include/: algorithm.hpp  plot.hpp
src_old/include/data/: data_point.hpp  data_set.hpp  feature_vector.hpp  feature_vector_set.hpp  foreign_key.hpp  sequence.hpp  sequence_set.hpp  storable.hpp
src_old/include/exp/: experiment.hpp
src_old/include/import/: minist.hpp  smi.hpp
src_old/include/objective/: classify.hpp  common.hpp  ffnn_classify.hpp  hmm.hpp  test_function.hpp
src_old/include/simulate/: hmm.hpp
src_old/include/tools/: command_line.hpp  timer.hpp
src_old/script/: build_schema.sql  create-reference.sh  extract-gdr.sh
src_old/src/: CMakeLists.txt  algorithm.cpp  common_tools.cpp  plot.cpp
src_old/src/data/: CMakeLists.txt  data_point.cpp  data_set.cpp  feature_vector.cpp  foreign_key.cpp  sequence.cpp  storable.cpp
src_old/src/exp/: CMakeLists.txt  experiment.cpp
src_old/src/import/: CMakeLists.txt  minist.cpp  smi.cpp
src_old/src/objective/: CMakeLists.txt  classify.cpp  common.cpp  ffnn_classify.cpp  hmm.cpp  test_function.cpp
src_old/src/simulate/: CMakeLists.txt  hmm.cpp
src_old/src/tools/: CMakeLists.txt  command_line.cpp  timer.cpp
src_old/test/: CMakeLists.txt  algorithm_test.cpp  data_set_test.cpp  feature_vector_test.cpp  fixtures.cpp  fixtures.hpp  sequence_test.cpp
src_old/test/fixtures/: build.sql  destroy.sql
src_old/tools/: CMakeLists.txt  compress.cpp  correlate-bg.cpp  import-minist.cpp  import-smi.cpp  import_fratures.cpp  plot-data-set.cpp  plot-sequence-histogram.cpp  reduce-data-size.cpp  scale.cpp  simulate.cpp  smi-db-import-classification.cpp  smi-db-import-level-detection.cpp  smi-db-import-track-interpretation.cpp
